Remove gap size from row layout and fix row layout css #741307651435882

--- a/public/sources/less/helpers/columnResizer/styles.less
+++ b/public/sources/less/helpers/columnResizer/styles.less
@@ -29,6 +29,12 @@
   }
 }
 
+.rtl .vce-column-resizer-handler,
+.rtl.vce-column-resizer-handler {
+  left: 0;
+  right: auto;
+}
+
 .vce-row--col-gap-0 .vce-column-resizer {
   .vce-column-resizer-handler {
     width: 2px;
